# my-6502

./: .dir-locals.el  .gitignore  .gitignore~  CMakeLists.txt  README.md  main  main.cpp  main_6502.cpp  main_6502.h  reimplement.txt
.cache/clangd/index/: emu6502.cpp.0804A872D21D8663.idx  emu6502.h.9A3B5BEEF6C25C5B.idx  gmock-actions.h.DD60DDF47BABD9F3.idx  gmock-all.cc.F3E6B2CD0AAA4534.idx  gmock-cardinalities.cc.1561AA4A6FDB6D93.idx  gmock-cardinalities.h.7E3B9BCE0A2C7026.idx  gmock-function-mocker.h.E8E97F3DFABD9919.idx  gmock-generated-actions.h.671BC2174F4E8C22.idx  gmock-internal-utils.cc.AE149FE2CFA52561.idx  gmock-internal-utils.h.141F3B6F530EEA4E.idx  gmock-matchers.cc.01731AA835181839.idx  gmock-matchers.h.658C348FDFB75D54.idx  gmock-matchers.h.C09AB6A5C92DD29A.idx  gmock-more-actions.h.0252239077684A76.idx  gmock-more-matchers.h.4784B7CE25951BA5.idx  gmock-nice-strict.h.05F241B848798B2C.idx  gmock-port.h.242E6EDE02488855.idx  gmock-port.h.91A6759BB90F8B28.idx  gmock-pp.h.F599A58E0791D7FB.idx  gmock-spec-builders.cc.E9C2DE228A31AA35.idx  gmock-spec-builders.h.AECBCAB8060BBC61.idx  gmock.cc.BCA24A70EDB14D4A.idx  gmock.h.B346A22194131AC9.idx  gmock_main.cc.F0A27DF99750F472.idx  gtest-all.cc.D7D49E2DB6BAD253.idx  gtest-assertion-result.cc.70286284A37EC736.idx  gtest-assertion-result.h.9DF414DC96712681.idx  gtest-death-test-internal.h.9DA1F62C5D81C5DE.idx  gtest-death-test.cc.E21A35506C9710C6.idx  gtest-death-test.h.B6150C9E4C59A5A6.idx  gtest-filepath.cc.F59EB2130AC20888.idx  gtest-filepath.h.13CB6C02FBD441B9.idx  gtest-internal-inl.h.AD07D863D6814714.idx  gtest-internal.h.0BF1DD7885B91795.idx  gtest-matchers.cc.65113A45BD443125.idx  gtest-matchers.h.CFB0D979A82229DA.idx  gtest-message.h.B6B586B1309BDCBA.idx  gtest-param-test.h.C940DC7B1F0CC0B7.idx  gtest-param-util.h.091CDA749973F842.idx  gtest-port-arch.h.C4DFBFB595368022.idx  (+26 more)
include/: #emu6502.h#  .#emu6502.h  emu6502.h  main_6502.h
my-6502-test/: CMakeLists.txt~  test_test.cpp  test_test.cpp~
src/: #emu6502.cpp#  emu6502.cpp  main_6502.cpp
test/: #test_test.cpp#  .#test_test.cpp  CMakeLists.txt  My6502JumpsAndCallsTests.cpp  My6502LoadRegisterTests.cpp  My6502StoreRegisterTests.cpp  test_test.cpp
